--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "basel",
   "displayName": "Basel",
+  "publisher": "BaselOrganization",
   "description": "Syntax highlighting for Basel language",
   "version": "0.0.1",
   "repository": "https://github.com/BaselOrganization/BaselHighlighting",
@@ -11,16 +12,28 @@
     "Programming Languages"
   ],
   "contributes": {
-    "languages": [{
-      "id": "basel",
-      "aliases": ["Basel", "basel"],
-      "extensions": [".bs"],
-      "configuration": "./language-configuration.json"
-    }],
-    "grammars": [{
-      "language": "basel",
-      "scopeName": "source.bs",
-      "path": "./syntaxes/basel.tmLanguage.json"
-    }]
+    "languages": [
+      {
+        "id": "basel",
+        "aliases": [
+          "Basel",
+          "basel"
+        ],
+        "extensions": [
+          ".bs"
+        ],
+        "configuration": "./language-configuration.json"
+      }
+    ],
+    "grammars": [
+      {
+        "language": "basel",
+        "scopeName": "source.bs",
+        "path": "./syntaxes/basel.tmLanguage.json"
+      }
+    ]
+  },
+  "dependencies": {
+    "vsce": "^2.15.0"
   }
 }
