Add icon.png and update package.json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "displayName": "Basel",
   "publisher": "BaselOrganization",
   "description": "Syntax highlighting for Basel language",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "icon": "./icon.png",
   "repository": "https://github.com/BaselOrganization/BaselHighlighting",
   "engines": {
     "vscode": "^1.109.0"
